# monoceros

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD  CMakeLists.txt  MODULE.bazel  OWNERS  README.md  VersionChangeNotes.md  WORKSPACE  _clang-format  bazel_meta.json  build.sh  ci.sh  faiss.sh
cmake/: faiss.cmake  frame.cmake  option.cmake  thirdparty.cmake
examples/: CMakeLists.txt
gpu/: Makefile  gpu_knn_linear.cpp  gpu_knn_linear.h  makefile.inc
gpu/examples/: test_knn_linear.cpp  test_knn_linear_ip.cpp
gpu/impl/: calculator_factory.h  index_calculator.cu  index_calculator.cuh  index_distance.cu  index_distance.cuh  linear_index.cu  linear_index.cuh  selectk.cuh
gpu/test/: gpuknn_linear_test.cc
gpu/utils/: Comparators.cuh  CopyUtils.cuh  DeviceDefs.cuh  DeviceMemory.cpp  DeviceMemory.h  DeviceTensor-inl.cuh  DeviceTensor.cuh  DeviceUtils.cpp  DeviceUtils.h  DeviceVector.cuh  FaissAssert.h  FaissException.h  GpuFaissAssert.h  GpuResources.cpp  GpuResources.h  HostTensor-inl.cuh  HostTensor.cuh  Limits.cuh  MathOperators.cuh  MemorySpace.cpp  MemorySpace.h  MergeNetworkBlock.cuh  MergeNetworkUtils.cuh  Pair.cuh  (+14 more)
rpm/: t-mit-proxima.spec
src/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: BUILD  bench.cc  bench_result.h  cat_recall.cc  centroid_vaild_tool.cc  dump_centroids.cc  index_show_tool.cc  knn_search.cc  l2norm_tool.cc  local_builder.cc  local_centroid_trainer.cc  lve_ms_split_data.cc  make_groundtruth.cc  mips_trans_tool.cc  ms.readme  pq_helper.h  print_groundtruth.cc  recall.cc  txt2fvecs.cc  txt2vecs.cc  txt_input_reader.h  vecs2txt.cc
(+610 files in other folders)
